fix image scaling on mobile && and keep modal centered on mobile

--- a/src/client/public/stylesheets/main.css
+++ b/src/client/public/stylesheets/main.css
@@ -236,8 +236,14 @@ input{
         max-height:250px;
     }
     .multimedia-img{
-        width:100%;
+        width:80%;
     }
+	
+	.modal-content{
+		top:50%;
+		left:50%;
+		transform:translate(-50%,-50%);
+	}
 }
 
 
